css/main.css
html,body {
	min-height: 100%;
	height: 100%;
	background-color: #eee;
}

hr{
	margin: 10px;
}

#footer {
	position: fixed;
	bottom: 0px;
	width: 100%;
	height: 30px;
	background-color:rgb(230,230,230);
	font-size: 10px;
	text-align: right;
}

.container .text-muted {
	margin: 10px 0;
}

.well{
	padding-top: 0px;
	padding-left: 0px;
	padding-right: 0px;
	height: 80%;
}
.well h2{
	text-align: center;
	background-color: #36a9e1;
	width: 100%;
	margin-top:0px;
	padding: 10px;
	font-size: 20px;
	color: white;
}
.well .container{
	width:100%;
}

button{
	text-align: center;
	margin: 10px 5%;
	width: 90%;
}

.center{
	text-align: center;
}

#master{
	padding-bottom: 30px;
}
.badge{
	font-size:15px;
}
.result .row{
	margin-top: 5px;
}

.help-block{
	color: red;
	font-size: 11px;
	margin-bottom: 0px;
}
.help-block ul{
	list-style-type: none;
	padding-left: 2px;
	margin-bottom: 0px;
}

.control-group.warning input.form-control {
border-color: #fa6d81;
box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(250, 109, 129, 0.6);
outline: 0 none;
}

@media (max-width:768px) { 

.well h2{
	font-size: 15px;
	margin-bottom: 2px;
	
}
.well{
	padding-bottom: 5px;
}
hr{
	margin: 5px;
}

}

/*
    Bootflat 1.0.1
    Designed & Built by flathemes, http://www.flathemes.com
    Licensed under MIT License, http://opensource.org/licenses/mit-license.html

    Thanks for supporting our website and enjoy!
*/
/*------------------------------------*\
    $default-square
\*------------------------------------*/
.img-thumbnail-square,
.btn-square,
.btn-group-square .btn,
.btn-group-square .dropdown-menu,
.btn-group-square .btn,
.btn-group-square .btn:first-child:not(:last-child),
.btn-group-square .btn:last-child:not(:first-child),
.table-bordered-square,
.table-bordered-square tr:first-child th:first-child,
.table-bordered-square tr:first-child th:last-child,
.table-bordered-square tr:last-child td:first-child,
.table-bordered-square tr:last-child td:last-child,
.input-group-square .btn,
.input-group-square .dropdown-menu,
.input-group-square .form-control,
.input-group-square .input-group-addon,
.dropdown-menu-square,
.dropdown-menu-square .dropdown-submenu .dropdown-menu,
.form-square .form-control,
.form-square .btn,
.form-control-square,
.label-square,
.badge-square,
.alert-square,
.alert-square .btn,
.progress-square,
.breadcrumb-square,
.tooltip-square .tooltip-inner,
.popover-square,
.nav-list-panel-square,
.nav-tabs-square li > a,
.tabs-below .nav-tabs-square li > a,
.tabs-right .nav-tabs-square li > a,
.tabs-left .nav-tabs-square li > a,
.nav-tabs-square .dropdown-menu,
.tabs-below .nav-tabs-square .dropdown-menu,
.nav-pills-square li a,
.nav-pills-square .dropdown-menu,
.navbar-square,
.navbar-square .dropdown-menu,
.pagination-square li:first-child a, 
.pagination-square li:first-child span,
.pagination-square li:last-child a, 
.pagination-square li:last-child span,
.pager-square li a:hover,
.pager-square li a:focus,
.panel-group-square .panel,
.panel-group-square .panel-heading,
.panel-group-square .panel-body,
.well-square,
/*------------------------------------*\
    $extend-square
\*------------------------------------*/
.breadcrumb-arrow-square li:first-child a {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
}

